--- a/style.css
+++ b/style.css
@@ -1,14 +1,35 @@
+@import 'blogpost.css';
+@import 'footer.css';
+
 * {
     margin: 0;
     padding: 0;
 }
 
+:root {
+    --main-bg-color: #bec5c9;
+}
+
 body {
     font-family: 'Work Sans', sans-serif;
+    background-color: var(--main-bg-color);
+}
+
+a {
+    text-decoration: none;
+}
+
+.neu {
+    box-shadow: 
+    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 50px;
 }
 
 .container {
     display: grid;    
+    justify-content: center;
+    height: 100vh;
 }
 
 header, footer {
@@ -16,19 +37,23 @@ header, footer {
     justify-content: center;
     border: solid 2px red;
     min-height: 10vh;
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 
 .content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    justify-items: center;
+    /* justify-content: center; */
+    grid-gap: 10px;
 }
 
 .card {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: solid 2px blue;
-    width: 100%;
-    min-height: 10vh;
+    /* border: solid 2px blue; */
+    width: 20vh;
+    min-height: 20vh;
+    margin: 10px;
 }
