--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import 'blogpost.css';
-@import 'footer.css';
+@import 'header-footer.css';
 
 * {
     margin: 0;
@@ -24,26 +24,40 @@ a {
     12px 12px 16px 0 rgba(0, 0, 0, 0.25),
     -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
     border-radius: 50px;
+    /* transition: 0s box-shadow; */
 }
+
+.neu:hover {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25),-2px -2px 5px rgba(255, 255, 255, 0.3);
+    /* transition-delay:.1s; */
+}
+
+/* 
+div{
+    transition: 0s background-color;
+}
+
+div:hover{
+    background-color:red;    
+    transition-delay:1s;
+} */
+
 
 .container {
-    display: grid;    
-    justify-content: center;
-    height: 100vh;
-}
-
-header, footer {
+    /* display: grid;     */
+    /* justify-content: center; */
     display: flex;
-    justify-content: center;
-    border: solid 2px red;
-    min-height: 10vh;
-    margin-top: 5px;
-    margin-bottom: 10px;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    height: 100vh;
+    width: 100vw;
 }
 
 .content {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: minmax(5vh, auto);
     /* justify-content: center; */
     grid-gap: 10px;
 }
@@ -52,7 +66,6 @@ header, footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    /* border: solid 2px blue; */
     width: 20vh;
     min-height: 20vh;
     margin: 10px;
