--- a/style.css
+++ b/style.css
@@ -32,17 +32,6 @@ a {
     /* transition-delay:.1s; */
 }
 
-/* 
-div{
-    transition: 0s background-color;
-}
-
-div:hover{
-    background-color:red;    
-    transition-delay:1s;
-} */
-
-
 .container {
     /* display: grid;     */
     /* justify-content: center; */
@@ -56,8 +45,8 @@ div:hover{
 
 .content {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-auto-rows: minmax(5vh, auto);
+    /* grid-template-columns: repeat(4, 1fr); */
+    grid-auto-rows: minmax(20vh, auto);
     /* justify-content: center; */
     grid-gap: 10px;
 }
@@ -66,7 +55,8 @@ div:hover{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 20vh;
-    min-height: 20vh;
-    margin: 10px;
+    width: 85vw;
+    margin: 1.5vh 0 1.5vh 0;
+    flex-direction: column;
+    padding: 2vh 2vw 2vh 2vw;
 }
