--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
-@import 'blogpost.css';
+@import 'about.css';
 @import 'header-footer.css';
 
-* {
+/* * {
     margin: 0;
     padding: 0;
-}
+} */
 
 :root {
     --main-bg-color: #bec5c9;
@@ -17,19 +17,41 @@ body {
 
 a {
     text-decoration: none;
+    color: black;
 }
 
 .neu {
     box-shadow: 
-    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    10px 10px 16px 0 rgba(0, 0, 0, 0.25),
     -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
     border-radius: 50px;
-    /* transition: 0s box-shadow; */
 }
 
 .neu:hover {
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.25),-2px -2px 5px rgba(255, 255, 255, 0.3);
+    box-shadow: 
+    2px 2px 5px rgba(0, 0, 0, 0.25),
+    -2px -2px 5px rgba(255, 255, 255, 0.3);
     /* transition-delay:.1s; */
+}
+
+.neu:active {
+    box-shadow: 
+    inset 8px 8px 6px 0 rgba(0, 0, 0, 0.25),
+    inset -6px -6px 10px 0 rgba(255, 255, 255, 0.3);
+}
+
+.neu-image {
+    box-shadow: 
+    12px 12px 16px 0 rgba(0, 0, 0, 0.25),
+    -8px -8px 12px 0 rgba(255, 255, 255, 0.3);
+    border-radius: 50px;
+    max-height: 50vh;
+    max-width: 80vw;
+}
+
+.home-quote {
+    max-width: 80vw;
+    text-align: center;
 }
 
 .container {
@@ -47,8 +69,6 @@ a {
     display: grid;
     /* grid-template-columns: repeat(4, 1fr); */
     grid-auto-rows: minmax(20vh, auto);
-    /* justify-content: center; */
-    grid-gap: 10px;
 }
 
 .card {
@@ -58,5 +78,6 @@ a {
     width: 85vw;
     margin: 1.5vh 0 1.5vh 0;
     flex-direction: column;
-    padding: 2vh 2vw 2vh 2vw;
+    padding: 2.5vh 2.5vw 4vh 2.5vw;
 }
+
